# InventoryFlow

./: .env.example  .gitignore  .gitmessage.txt  LICENSE  README.md  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 8e5d189e06d6_initial_migration.py
app/: __init__.py  config.py  main.py  utils.py
app/auth/: auth_route.py  auth_service.py  auth_utils.py  schemas.py
app/db/: database.py  models.py  schemas.py
app/middleware/: cors.py
app/routers/: incoming_orders  incoming_orders.py
app/routers/category/: category.py
app/routers/customer/: customer.py
app/routers/dashboard/: dashboard.py
app/routers/incoming_orders/: incoming_orders.py
app/routers/outgoing_orders/: outgoing_orders.py
app/routers/products/: products.py
app/routers/stock/: stock.py
app/routers/supplier/: supplier.py
app/services/: __init__.py  base.py  category_service.py  customer_service.py  dashboard_service.py  incoming_orders_service.py  outgoing_order_service.py  products_service.py  stocks_service.py  supplier_service.py
app/services/incoming_orders/: service.py
app/services/outgoing_orders/: service.py
app/services/products/: service.py
